fix(UI): invisible selected-actions (#121)
Selected actions now appears on bottom of albums feed, like it was before.

--- a/src/app/view/AlbumsFeed/AlbumsFeed.css
+++ b/src/app/view/AlbumsFeed/AlbumsFeed.css
@@ -7,5 +7,5 @@
   padding: 1em;
   overflow-y: auto;
   flex-basis: 100%;
-  flex-shrink: 1;
+  flex-shrink: 1 !important;
 }
